--- a/main.html
+++ b/main.html
@@ -11,6 +11,11 @@ game knight
 Welcome brave knight the kingdom needs you<br>
 An evil shadow threatens the land What will be your fate<br>
 </h1>
+<video width="320" height="240" controls>
+  <source src="intro.mp4" type="video/mp4">
+  
+Your browser does not support the video tag.
+</video>
 <br>
 <a href="florest.html">Explore the dark forest</a><br><br>
 <a href="tavern.html">Go to the tavern</a><br><br>
