--- a/florest.html
+++ b/florest.html
@@ -10,6 +10,11 @@ game knight
 <h1>
 florest<br>
 </h1>
+<video width="320" height="240" controls>
+  <source src="florest.mp4" type="video/mp4">
+  
+Your browser does not support the video tag.
+</video>
 <br>
 <a href="main.html">meets an old wizard who gives him a magical portion</a><br><br>
 <a href="main.html">back</a><br><br>
