--- a/tavern.html
+++ b/tavern.html
@@ -10,6 +10,11 @@ game knight
 <h1>
 tavern<br>
 </h1>
+<video width="320" height="240" controls>
+  <source src="tavern.mp4" type="video/mp4">
+  
+Your browser does not support the video tag.
+</video>
 <br>
 <a href="main.html">You enter the tavern and hear rumors about a dragon</a><br><br>
 <a href="main.html">The innkeeper warns that the dungeon is dangerous</a><br><br>
