--- a/main.html
+++ b/main.html
@@ -17,6 +17,14 @@ An evil shadow threatens the land What will be your fate<br>
 Your browser does not support the video tag.
 </video>
 <br>
+
+<video width="320" height="240" controls>
+  <source src="intros.mp4" type="video/mp4">
+  
+Your browser does not support the video tag.
+</video>
+<br>
+<br>
 <a href="florest.html">Explore the dark forest</a><br><br>
 <a href="tavern.html">Go to the tavern</a><br><br>
 <a href="dugeons.html">Enter the dungeons</a><br><br>
